[package]
name = "flyte"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = { optional = true, version = "0.47.0" }
anyhow = "1.0.44"
async-trait = "0.1.51"
bytes = "1.1.0"
futures = "0.3.15"
tokio = { version = "1.12.0", features = ["full"] }

[features]
local = []
s3 = ["rusoto_s3"]
#memory = []
